--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,15 +10,15 @@
 
 
 .banner{
-    text-align: center; 
+    animation: animate 1s linear forwards;
+    text-align: center;
+    letter-spacing: 10PX;
     color: white;
     font-size: 50px;
     font-family: evanescent;
     font-weight: 700;
-    p{
-        display: inline-block;
-        animation: animate 1s linear forwards;
-    }
+    
+    
 }
 
 @keyframes animate {
