--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*----------GENERAL--------*/
 @font-face {
   font-family: "evanescent";
   src: url(../fonts/evanescent.ttf); }
@@ -6,11 +7,58 @@
   margin: 0;
   padding: 0; }
 
+body {
+  background-color: grey;
+  background-image: url(../images/FondoB.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  color: white;
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto; }
+
+/*--------HEADER----------*/
+.headerMenu {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  background: transparent;
+  /*background: #1A1A40;*/
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 16px;
+  font-weight: 400; }
+  .headerMenu a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white; }
+  .headerMenu a:hover {
+    border-radius: 15px;
+    background: #715ca1;
+    background: linear-gradient(90deg, #715ca1 0%, #5632ab 44%, #270082 100%); }
+
+/*-------FOOTER----------*/
+footer ul {
+  margin: 10px;
+  padding: 5px;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  list-style: none;
+  background: #715ca1;
+  background: linear-gradient(90deg, #715ca1 0%, #5632ab 44%, #270082 100%); }
+
+footer li {
+  display: flex;
+  justify-items: center; }
+
+/*--------BANNER--------*/
 .banner {
   animation: animate 1s linear forwards;
   text-align: center;
   letter-spacing: 10PX;
-  color: white;
   font-size: 50px;
   font-family: evanescent;
   font-weight: 700; }
@@ -25,65 +73,173 @@
     transform: rotateY(0deg);
     filter: blur(0); } }
 
-/*---HEADER----*/
-.headerMenu, .headerMenuBootstrap {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  list-style: none;
-  margin: 0;
-  background: black;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 16px;
-  font-weight: 400; }
-  .headerMenu a, .headerMenuBootstrap a {
-    text-decoration: none;
-    display: block;
-    padding: 1em;
-    color: white; }
-  .headerMenu a:hover, .headerMenuBootstrap a:hover {
-    border-radius: 15px;
-    background: #c764df;
-    background: linear-gradient(90deg, #c764df 0%, #7f26ba 44%, #6a00ff 100%); }
-
-body {
-  background-color: black;
-  color: white;
-  display: grid;
-  min-height: 100vh;
-  grid-template-rows: auto 1fr auto; }
-
+/*-------INDEX----------*/
 .container img {
   display: flex;
-  margin: auto; }
+  margin: auto;
+  padding: 4px; }
 
 .container ul {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  list-style: none;
-  color: white; }
+  list-style: none; }
 
 .container p {
   display: flex;
   text-align: center;
-  justify-content: center;
+  justify-content: center; }
+
+/*--------BAND---------*/
+.containerBand {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  align-items: center;
+  text-align: center;
+  grid-template-areas: "imgAmy textAmy" "textTim imgTim" "imgWill textWill" "textTroy imgTroy" "imgEmma textEmma"; }
+
+.imgAmy {
+  grid-area: imgAmy; }
+
+.textAmy {
+  grid-area: textAmy;
+  text-align: left;
+  max-width: 80%;
+  margin: 3px;
+  padding: 3px;
+  border: 3px #7A0BC0 solid;
+  border-radius: 10px; }
+
+.imgTim {
+  grid-area: imgTim; }
+
+.textTim {
+  grid-area: textTim;
+  text-align: right;
+  justify-self: right;
+  max-width: 80%;
+  margin: 3px;
+  padding: 3px;
+  border: 3px #7A0BC0 solid;
+  border-radius: 10px; }
+
+.imgWill {
+  grid-area: imgWill; }
+
+.textWill {
+  grid-area: textWill;
+  text-align: left;
+  max-width: 80%;
+  margin: 3px;
+  padding: 3px;
+  border: 3px #7A0BC0 solid;
+  border-radius: 10px; }
+
+.imgTroy {
+  grid-area: imgTroy; }
+
+.textTroy {
+  grid-area: textTroy;
+  text-align: right;
+  justify-self: right;
+  max-width: 80%;
+  margin: 3px;
+  padding: 3px;
+  border: 3px #7A0BC0 solid;
+  border-radius: 10px; }
+
+.imgEmma {
+  grid-area: imgEmma; }
+
+.textEmma {
+  grid-area: textEmma;
+  text-align: left;
+  max-width: 80%;
+  margin: 3px;
+  padding: 3px;
+  border: 3px #7A0BC0 solid;
+  border-radius: 10px; }
+
+/*-----ESTILO IMAGENES------*/
+.imgBand {
+  height: 350px;
+  width: 400px;
+  border-radius: 10px;
+  border-color: #7A0BC0;
+  border-style: ridge;
+  margin: 3px; }
+
+.imgBand:hover {
+  transition: 1s;
+  transform: scale(1.05); }
+
+.imgBand:not(:hover) {
+  transition: 1s;
+  transform: scale(1); }
+
+/*---------NEWS--------*/
+.grilla {
+  display: grid;
+  grid-template-columns: 0.65fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  color: white;
+  grid-template-areas: "img1 text1" "img2 text2"; }
+
+.img1 {
+  grid-area: img1; }
+
+.text1 {
+  grid-area: text1;
+  text-align: left;
+  max-width: 80%; }
+
+.img2 {
+  grid-area: img2; }
+
+.text2 {
+  grid-area: text2;
+  text-align: left;
+  max-width: 80%; }
+
+.imgNews {
+  border: 3px #7A0BC0 solid;
+  margin: 2px; }
+
+.imgNews:hover {
+  transition: 1s;
+  transform: scale(1.05); }
+
+.imgNews:not(:hover) {
+  transition: 1s;
+  transform: scale(1); }
+
+/*------CONTACTS------*/
+/*---Color y posisicion de botones----*/
+.colorB {
+  background-color: #7A0BC0;
   color: white; }
 
-footer ul {
-  margin: 10px;
-  padding: 5px;
+.buttonCenter {
   display: flex;
   flex-flow: row;
-  justify-content: center;
-  list-style: none;
-  background: #c764df;
-  background: linear-gradient(90deg, #c764df 0%, #7f26ba 44%, #6a00ff 100%); }
+  justify-content: space-evenly; }
 
-footer li {
+.foot {
   display: flex;
-  justify-items: center; }
+  flex-direction: column;
+  justify-content: space-between; }
 
+.center {
+  display: flex;
+  flex-flow: column;
+  align-items: center; }
+
+/*----RESPOSIVE-------*/
+/*------INDEX-------*/
 @media screen and (max-width: 1027px) {
   .container {
     flex-direction: column;
@@ -98,17 +254,53 @@ footer li {
     width: 100%; }
   .indexImg {
     width: 70%;
-    height: 70%; }
-  .headerMenu a, .headerMenuBootstrap a {
+    height: 60%; }
+  .headerMenu a {
+    font-size: 12px; }
+  .music {
+    width: 320px;
+    height: 280px; } }
+
+/*-----BAND-------*/
+@media screen and (max-width: 768px) {
+  .containerBand {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 0.7fr);
+    color: white;
+    justify-self: center;
+    grid-template-areas: "imgAmy"  "textAmy" "imgTim" "textTim"  "imgWill" "textWill"  "imgTroy" "textTroy" "imgEmma" "textEmma"; }
+  .textAmy {
+    display: flex;
+    flex-direction: column;
+    justify-self: center; }
+  .textTim {
+    display: flex;
+    flex-direction: column;
+    justify-self: center; }
+  .textWill {
+    display: flex;
+    flex-direction: column;
+    justify-self: center; }
+  .textTroy {
+    display: flex;
+    flex-direction: column;
+    justify-self: center; }
+  .textEmma {
+    display: flex;
+    flex-direction: column;
+    justify-self: center; } }
+
+/*-----NEWS----*/
+@media screen and (max-width: 768px) {
+  .grilla {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    grid-template-areas: "img1" "text1" "img2" "text2";
+    width: 100%;
+    font-size: 65%; }
+  .headerMenu a {
     font-size: 12px; } }
 
-/*EXTEND*/
-.headerMenuBootstrap a:hover {
-  border-radius: 16px;
-  background: #6c64df;
-  background: linear-gradient(90deg, #6c64df 0%, #0a1eda 44%, #0400ff 100%); }
-
-/*Mixin imagenes de pagina banda*/
-.imgBand {
-  height: 350px;
-  width: 400px; }
+/*--------ALBUM----------*/
