--- a/scss/_resposive.scss
+++ b/scss/_resposive.scss
@@ -55,6 +55,7 @@
       display: flex;
       flex-direction: column;
       justify-self: center;
+      text-align: left;
     }
     .textWill{
       display: flex;
@@ -65,12 +66,24 @@
       display: flex;
       flex-direction: column;
       justify-self: center;
+      text-align: left;
     }
     .textEmma{
       display: flex;
       flex-direction: column;
       justify-self: center;
     }
+    /*-----FOOTER--------*/
+    .social{
+      width: 80%;
+      height: 90%;
+    }
+    footer{
+      ul{
+          margin: 10px;
+          padding: 3px;
+      }
+    }    
 }
 /*-----NEWS----*/
 @media screen and (max-width: 768px) {
