--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -9,6 +9,7 @@
         flex-flow: column wrap;
         align-items: center;
         list-style: none;
+        margin: auto;
     }
     p{
         display: flex;
