--- a/css/main.css
+++ b/css/main.css
@@ -83,8 +83,7 @@ footer li {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  list-style: none;
-  margin: auto; }
+  list-style: none; }
 
 .container p {
   display: flex;
