--- a/scss/_resposive.scss
+++ b/scss/_resposive.scss
@@ -50,6 +50,7 @@
       display: flex;
       flex-direction: column;
       justify-self: center;
+      margin: 20px;
     }
     .textTim{
       display: flex;
@@ -61,12 +62,14 @@
       display: flex;
       flex-direction: column;
       justify-self: center;
+      margin: 20px;
     }
     .textTroy{
       display: flex;
       flex-direction: column;
       justify-self: center;
       text-align: left;
+      margin: 3px;
     }
     .textEmma{
       display: flex;
